syntax = "proto3";
package Meter;

import "google/protobuf/empty.proto";

service CustomerService {
  rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse);
  rpc GetCustomerById(GetCustomerRequest) returns (CustomerDto);
  rpc SubscribeCustomerCreated(google.protobuf.Empty) returns (stream CustomerCreatedEvent);
}

message CreateCustomerRequest {
  string name  = 1;
  string email = 2;
}

message CreateCustomerResponse {
  string id = 1;
}

message GetCustomerRequest {
  string id = 1;
}

message CustomerDto {
  string id    = 1;
  string name  = 2;
  string email = 3;
}

message CustomerCreatedEvent {
  string customerId = 1;
  string name       = 2;
  string email      = 3;
  int64  occurredAt = 4;
}
